# lwip

./: .gitignore  lwipopts.h.meson.in  meson.build  meson_options.txt
contrib/: meson.build
contrib/ports/: meson.build
contrib/ports/glib/: meson.build  sys_arch.c
contrib/ports/glib/include/arch/: cc.h  meson.build  perf.h  sys_arch.h
src/: meson.build
src/api/: meson.build
src/core/: init.c  ip.c  meson.build
src/core/ipv4/: meson.build
src/core/ipv6/: meson.build
src/include/: meson.build
src/include/lwip/: meson.build
src/include/lwip/priv/: meson.build
src/include/lwip/prot/: meson.build
src/netif/: meson.build
subprojects/: glib.wrap
