option('lwip_debug',
  type: 'feature',
  value: 'auto',
  description: 'Enable lwIP debug infrastructure',
)

option('ipv4',
  type: 'feature',
  value: 'auto',
  description: 'Enable IPv4 support',
)

option('ipv6',
  type: 'feature',
  value: 'auto',
  description: 'Enable IPv6 support',
)

option('dns',
  type: 'feature',
  value: 'auto',
  description: 'Enable DNS support',
)

option('arp',
  type: 'feature',
  value: 'auto',
  description: 'Enable ARP support',
)

option('ethernet',
  type: 'feature',
  value: 'auto',
  description: 'Enable Ethernet support',
)

option('tcp_wnd',
  type: 'integer',
  value: 4194304,
  description: 'TCP window size',
)

option('tcp_mss',
  type: 'integer',
  value: 16000,
  description: 'TCP Maximum Segment Size',
)

option('tcp_snd_buf',
  type: 'integer',
  value: 4194304,
  description: 'TCP sender buffer space (bytes)',
)

option('tcp_sndlowat',
  type: 'integer',
  value: 1048576,
  description: 'TCP writable space (bytes)',
)

option('tcp_snd_queuelen',
  type: 'integer',
  value: 1050,
  description: 'TCP sender buffer space (pbufs)',
)

option('tcp_sndqueuelowat',
  type: 'integer',
  value: 32,
  description: 'TCP writable bufs (pbuf count)',
)
