subdir('ipv4')
subdir('ipv6')

core_sources = files(
  'init.c',
  'def.c',
  'dns.c',
  'inet_chksum.c',
  'ip.c',
  'mem.c',
  'memp.c',
  'netif.c',
  'pbuf.c',
  'raw.c',
  'stats.c',
  'sys.c',
  'altcp.c',
  'altcp_alloc.c',
  'altcp_tcp.c',
  'tcp.c',
  'tcp_in.c',
  'tcp_out.c',
  'timeouts.c',
  'udp.c',
)
