install_headers(
  'acd.h',
  'altcp.h',
  'altcp_tcp.h',
  'altcp_tls.h',
  'api.h',
  'arch.h',
  'autoip.h',
  'debug.h',
  'def.h',
  'dhcp.h',
  'dhcp6.h',
  'dns.h',
  'err.h',
  'errno.h',
  'etharp.h',
  'ethip6.h',
  'icmp.h',
  'icmp6.h',
  'if_api.h',
  'igmp.h',
  'inet.h',
  'inet_chksum.h',
  'init.h',
  'ip.h',
  'ip4.h',
  'ip4_addr.h',
  'ip4_frag.h',
  'ip6.h',
  'ip6_addr.h',
  'ip6_frag.h',
  'ip6_zone.h',
  'ip_addr.h',
  'mem.h',
  'memp.h',
  'mld6.h',
  'nd6.h',
  'netbuf.h',
  'netdb.h',
  'netif.h',
  'netifapi.h',
  'opt.h',
  'pbuf.h',
  'raw.h',
  'sio.h',
  'snmp.h',
  'sockets.h',
  'stats.h',
  'sys.h',
  'tcp.h',
  'tcpbase.h',
  'tcpip.h',
  'timeouts.h',
  'udp.h',
  subdir: 'lwip',
)

subdir('priv')
subdir('prot')
